<resources>
    <string name="app_name">Shop on the go</string>
    <string name="title_activity_maps">Shop On The Go</string>
    <string name="title">Choose your categories</string>
    <string name="ok_label">OK</string>
    <string name="dismiss_label">Dismiss</string>
    <string name="clear_all_label">Clear all</string>
    <string name="radius_text">Your current radius is: 750 meters.</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="my_desires">My Desires</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="saved_discounts">Saved Discounts</string>
    <string name="saved_offers">Saved Offers</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="about_us">About Us</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="email">Email</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="password">Password</string>
    <string name="you_don_t_have_an_account_sign_up">You don\'t have an account? Sign Up!</string>
    <string name="login">LOGIN</string>
    <string name="loggin_in">Loggin in...</string>
    <string name="singin_up_and_loggin_in">Singin up and loggin in</string>
    <string name="email">Email</string>
    <string name="verify_your_password">Verify your Password</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register_and_login">Register and Login</string>
    <string name="submitting_your_shop">Submitting your Shop...</string>
    <string name="example_electronics_foods">Example: Electronics, Foods</string>
    <string name="select_your_categories">Select your categories</string>
    <string name="select_the_shops_categories">Select the Shops Categories</string>
    <string name="select_your_categories">Select your categories</string>
    <string name="select_the_shops_address">Select the Shops Address</string>
    <string name="titleshop">Title</string>
    <string name="your_address_will_show_here">Your Address will show here</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="submit_your_shop">Submit your Shop:</string>

    <string-array name="productCategories">
        <item>Accessories</item>
        <item>Car</item>
        <item>Consumables</item>
        <item>Clothes</item>
        <item>Decoration</item>
        <item>Electronics</item>
        <item>Foods</item>
        <item>Furniture</item>
        <item>Consumables</item>
        <item>Furniture</item>
    </string-array>

    <string-array name="productACategories">
        <item>Clothing, Shoes and Accessories</item>
        <item>Business and Industrial</item>
        <item>Toys and Hobbies</item>
        <item>Books</item>
        <item>Camping Accessories</item>
        <item>Collectibles and Art</item>
        <item>Computer goods</item>
        <item>Decoration tools and equipment</item>
        <item>Electronics</item>
        <item>Fast Foods</item>
        <item>Restaurant Foods</item>
        <item>Furniture</item>
        <item>Kitchen Accessories</item>
        <item>Pet Supplies</item>
        <item>Health and Beauty</item>
        <item>Music</item>
        <item>Motors</item>
        <item>Pottery and Glass</item>
        <item>Phones and Accessories</item>
        <item>Sporting goods</item>
        <item>Coins and Paper Money</item>
        <item>Sports Memorabilia, Fan Shop and Sports Cards</item>
        <item>Video Games and Consoles</item>
      </string-array>
</resources>
