<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group >
        <item
            android:id="@+id/navDesires"
            android:icon="@mipmap/ic_thumb_up_black_24dp"
            android:title="@string/my_desires" />
        <item
            android:id="@+id/navWishlist"
            android:icon="@mipmap/ic_add_shopping_cart_black_24dp"
            android:title="@string/my_wishlist" />
    </group>

    <group >
        <item
            android:id="@+id/navSavedDiscounts"
            android:icon="@mipmap/ic_save_black_24dp"
            android:title="@string/saved_discounts" />
        <item
            android:id="@+id/navSavedOffers"
            android:icon="@mipmap/ic_save_black_24dp"
            android:title="@string/saved_offers" />
    </group>
    <item
        android:id="@+id/navSettings"
        android:icon="@mipmap/ic_settings_black_24dp"
        android:title="@string/settings" />

    <item android:id="@+id/navLogout"
        android:icon="@mipmap/ic_exit_to_app_black_18dp"
        android:title="@string/logout"/>

    <item android:id="@+id/navAbout"
        android:icon="@mipmap/ic_label_black_24dp"
        android:title="@string/about_us"/>

</menu>